--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DriveDiary</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css'>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="global.css">
   <link rel="manifest" href="manifest.json">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
@@ -28,7 +31,7 @@
               </div>
             </div>
             <button id="end-button" style="display: none;">End Day</button>
-          </div>
+      </div>
     </div>
     
     
@@ -73,3 +76,4 @@
 <script src="scripts.js"></script> 
 </body>
 </html>
+
